# chaintools

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
assets/changelog/: Changelog.md
assets/tools/: anti-repeat.md  filter.md  merge.md  sort.md  split.md
assets/usage/: usage.md
bench/: benchmark.rs
src/: antirepeat.rs  block.rs  chain.rs  error.rs  index.rs  lib.rs  main.rs  reader.rs  sequence.rs  storage.rs  stream.rs  writer.rs
src/cli/: anti_repeat.rs  bed.rs  filter.rs  merge.rs  mod.rs  score.rs  sort.rs  sort_core.rs  split.rs
src/io/: index.rs  mod.rs  reader.rs  storage.rs  stream.rs  writer.rs
src/model/: block.rs  error.rs  mod.rs
src/parser/: common.rs  mod.rs  parallel.rs  sequential.rs
src/seq/: antirepeat.rs  mod.rs  revcomp.rs  sequence.rs
src/seq/score/: chainscore.rs  gapcalc.rs  mod.rs  scoring.rs
tests/: blocks.rs  chains.rs  errors.rs  io.rs  parsing.rs  reader.rs  storage.rs  streaming.rs
tests/data/: basic.chain
