[package]
name = "chaintools"
version = "0.0.2"
edition = "2024"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
license = "MIT"
description = "Work with .chain files in Rust"
homepage = "https://github.com/alejandrogzi/chaintools"
repository = "https://github.com/alejandrogzi/chaintools"
readme = "README.md"
keywords = ["chain", "lib", "genomic", "tool"]

[features]
default = ["mmap"]
mmap = ["memmap2"]
gzip = ["flate2"]
parallel = ["rayon"]
index = []

[dependencies]
flate2 = { version = "1", optional = true }
memchr = "2"
memmap2 = { version = "0.9", optional = true }
rayon = { version = "1", optional = true }
